Color Scheme and Carousel Item Alignment Fixes
- Added night and eggshell fully to globals.css as tailwind classes
- Resume bubbles recolored

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,11 @@ body {
 
 @layer utilities {
     .bg-night { background-color: #0a0a0a; }
+    .bg-eggshell { background-color: #DCDFCC }
 
     .text-night { color: #0a0a0a; }
+    .text-eggshell { color: #DCDFCC }
+
+    .ring-night { --tw-ring-color: #0a0a0a; }
+    .ring-eggshell { --tw-ring-color: #DCDFCC }
 }
